Añadiendo card-img y corriendo bug scrollbar

--- a/scss/_code.scss
+++ b/scss/_code.scss
@@ -23,7 +23,7 @@
 
     .code-block {
         background-color: $secondary;
-        overflow-y: scroll;
+        overflow-y: none;
         div{
             background-color: $dark;
         }
